# demo

./: demo.cabal
src/AddStuffToCode/: AddBuildDepends.hs
src/AutoCompletion/: AutoComplete.hs
src/Linting/: LintMe.hs
src/Move/There/: MoveMe.hs
src/Refer/: IncludeMe.hs  Refer.hs
src/Renaming/: ImportSomething.hs  RenameMe.hs
src/Renaming/RenameMeToo/: Me.hs  Name.hs  Re.hs
src/StandardStuff/: StandardStuff.hs
