-- The name of the package.
name:               demo

version:             0.1.0.0

author:              Kasper

category:            Development

build-type:          Simple


cabal-version:       >=1.8


library
  hs-source-dirs:    src/main
  exposed-modules:
  -- TODO Go To Declaration on Include Me
    Refer.IncludeMe,
    Renaming.RenameMe,
    Renaming.ImportSomething

  other-modules:
  build-depends:       base >=4.6

  ghc-options:         -threaded -O2
